# DataEngineering-AdvancedPython

./: .gitignore  README.md  enunciado.ipynb  pyproject.toml  requirements.txt
notebooks/: prueba_modulo_ivonne.ipynb
tests/: TESTS_MINIMALISTAS.md  test_cache.py
traficFines/: cache.py  madridFines.py
