[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traficFines"
version = "0.1.0"
description = "Paquete para gestionar, limpiar, almacenar y analizar datos de multas de tráfico del Ayuntamiento de Madrid"
requires-python = ">=3.8"
authors = [
    {name = "Ivonne Mendoza", email = "ivonne@imendoza.io"}
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "pdoc>=0.1.0",
]

[tool.setuptools]
packages = ["traficFines"]

